# src/controllers/register.ts
@@ -14,12 +14,12 @@ export interface RUserw {
   password: string;
 }
 
-@Route('/api/register')
+@Route('/user')
 export class RegisterController extends Controller {
   /**
    * This is a description of the register user method
    */
-  @Post('/user')
+  @Post('/register')
   @Tags("Users")
   @OperationId('registerUser')
   @Response<IResponse>('400', 'Bad Request')
@@ -44,6 +44,36 @@ export class RegisterController extends Controller {
       }
       return response;
     } 
-
   }
+    /**
+   * This is a description of the authenticate user method
+   */
+  @Post('/authenticate')
+  @Tags("Users")
+  @OperationId('registerUser')
+  @Response<IResponse>('400', 'Bad Request')
+  @SuccessResponse('200', 'OK')
+  public async authUser(@Body() body: RUserw): Promise<IResponse> {
+    try {
+      const user = new UserModel(body);
+      await user.save();
+      const response = {
+        message: "ok",
+        status: "200",
+        data: body,
+      }
+      return response;
+    }
+    catch(err) {
+      this.setStatus(400);
+      const response = {
+        message: "fail",
+        status: "400",
+        data: err,
+      }
+      return response;
+    } 
+  }
+  
+
 }
